    - Only pass a string to $wiki
* UserMailer::sanitizeHeaderValue emits deprecation warnings. This function
  is no longer used within core/extensions. No replacement is provided.
* (T387995) Deprecated AbortTalkPageEmailNotification hook. Use the Notification
  Middleware to filter our Talk Page notifications
* (T45646) The hook 'SkinCopyrightFooter' now emits deprecation warnings.
* …

=== Other changes in 1.44 ===
* The ArticleProtect and ArticleProtectComplete hooks are now called when
  WikiPage::doUpdateRestrictions is called to protect a non-existing
  title.
* Introduce ISearchResultSet::isApproximateTotalHits() (defaults to false
  in BaseSearchResultSet) to let SearchEngine implementations run optimizations
  that might lead to innacurate computation of the exact number of pages
  matching the search query.
* (T367441) ResourceLoader Debug mode now defaults to debug mode v2. This means
  ?debug=true now maps to debug=2. Unlike debug mode v1, this doesn't load each
  file from disk, and your code looks the same as it is in production with
  closures that prevent global variable leakage.
* …

== Compatibility ==

MediaWiki 1.44 requires PHP 8.1.0 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.24.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

  <https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation>

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:
